fix: fixed overlap of dropdown with toc on desktop

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/toc-tree/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/toc-tree/styles.scss
@@ -269,6 +269,11 @@
 
     border: none;
   }
+
+  @media (width >= $breakpoint-desktop-min) {
+    position: relative;
+    z-index: 1;
+  }
 }
 
 .theme-dark .sidebar {
